--- a/personnages.html
+++ b/personnages.html
@@ -2,21 +2,37 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Personnages – L'Entre-Deux</title>
+  <title>Personnages – L'Homme parfait</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
+  <header>
+    <h1>Personnages</h1>
+    <p class="location">Vous êtes sur : Personnages</p>
+  </header>
+
   <nav>
-    <a href="index.html">Accueil</a>
-    <a href="galerie.html">Galerie</a>
-    <a href="personnages.html">Personnages</a>
-    <a href="contact.html">Contact</a>
+    <a href="index.html" class="animate__animated animate__fadeInDown">Accueil</a>
+    <a href="galerie.html" class="animate__animated animate__fadeInDown">Galerie</a>
+    <a href="personnages.html" class="animate__animated animate__fadeInDown">Personnages</a>
+    <a href="contact.html" class="animate__animated animate__fadeInDown">Contact</a>
   </nav>
-  <h2>Personnages</h2>
-  <ul>
-    <li><strong>Kristy</strong> – Le héros mi-humain, mi-robot</li>
-    <li><strong>Général Emmanuel</strong> – Leader des humains</li>
-    <li><strong>Perhar</strong> – Commandant des machines</li>
-  </ul>
+
+  <main>
+    <h2>1. Kristy</h2>
+    <img src="images/kristy.jpg" alt="Kristy" style="max-width: 100%; max-height: 300px;">
+    <p>Kristy est un hybride unique, porteur d’un message d’unité. Doté de la force mécanique et de la sensibilité humaine, il cherche à éviter l’anéantissement mutuel des deux espèces.</p>
+
+    <h2>2. Général Emmanuel</h2>
+    <img src="images/emmanuel.jpg" alt="Général Emmanuel" style="max-width: 100%; max-height: 300px;">
+    <p>Le chef des humains. Traumatisé par les pertes, il est à la fois courageux et inflexible. Il incarne les résistances humaines à faire confiance à l’intelligence artificielle.</p>
+
+    <h2>3. Perhar</h2>
+    <img src="images/perhar.jpg" alt="Perhar" style="max-width: 100%; max-height: 300px;">
+    <p>Perhar dirige les machines avec froideur et logique. Mais face à Kristy, il commence à douter de ses propres certitudes. Une machine peut-elle changer de point de vue ?</p>
+  </main>
+
+  <footer>&copy; 2025 - L'Homme parfait</footer>
 </body>
 </html>
