--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 </nav>
 <main>
 <p>Pour toute question, suggestion ou demande de collaboration, vous pouvez nous écrire à :</p>
-<p><a href="mailto:contact@entredeuxfilm.com">contact@entredeuxfilm.com</a></p>
+<p><a href="kristy-usey.nsana@ascitech.ac.cd">kristy-usey.nsana@ascitech.ac.cd</a></p>
 <p>Nous répondons dans les 48 heures ouvrables.</p>
 </main>
 <footer>&copy; 2025 - L'Homme parfait</footer>
